# Info_tasks

./: 11_dynafeld.h  12_fibo.h  14_rekursion.h  15_bubblesort.h  17_continue.h  18_studierende.h  19_customer.h  21_artikel.h  23_stack.h  24_person.h  26_auto.h  27_zahl.h  29_liste.h  2_median.h  30_wine.h  3_lotto.h  5_prime_number.h  6_merkmale.h  8_arr.h  9_mittelwert.h  CMakeLists.txt  README.md  main  main.cpp
.cache/clangd/index/: main.cpp.FF5A0E7DC379ED0B.idx
