cmake_minimum_required(VERSION 3.10)

set(CMAKE_CXX_STANDARD 17)

project(Informatik)

add_executable(Informatik main.cpp
        3_lotto.h
        5_prime_number.h
        6_merkmale.h
        8_arr.h
        9_mittelwert.h
        11_dynafeld.h
        12_fibo.h
        14_rekursion.h
        15_bubblesort.h
        17_continue.h
        18_studierende.h)
